style.css
#header-title {
  width: 100%;
  text-align: center;
  color: #CBF5F9;
  font-size: 35px;
  font-weight: 700;
  letter-spacing: 4px;
  font-family: 'Kanit', sans-serif;
  position: fixed;
  top: 0px;
  left: 0px;
  margin-top: 0px;
  padding-top: 15px;
  padding-bottom: 15px;
  background-image: linear-gradient(to right, #71ABD1, #D983E4);
}

div.lol{
  display: flex;
  justify-content: center;
  text-align: center;
  width: 200px;
  height: 315px;
  padding-top: 115px;
  padding-bottom: 45px;
}

div.preview {
  display: flex;
  justify-content: center;
  text-align: center;
}

#preview-img {
  width: 85%;
  height: 85%;
  padding-top: 115px;
  padding-bottom: 45px;
}

div.our-team {
  display: flex;
  justify-content: center;
  border-top: 1px solid #9B47EF;
}

#our-team {
  color: #71ABD1;
  font-size: 30px;
  font-weight: 700;
  letter-spacing: 2px;
  font-family: 'Alegreya Sans SC', sans-serif;
  padding-top: 20px;
}

div.team {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  padding-bottom: 45px;
  border-bottom: 1px solid #9B47EF;
}

div.member {
  vertical-align: top;
  display: inline-block;
  text-align: center;
  height: 15%;
  width: 15%;
}

#team-member {
  padding: 2%;
  margin: 3%;
  border: 2px solid #71ABD1;
  height: 70%;
  width: 70%;
}

div.description {
  justify-content: center;
  margin: auto;
  border-top: 1px solid #9B47EF;
  border-bottom: 1px solid #9B47EF;
}

#our-game {
  color: #71ABD1;
  font-size: 40px;
  font-weight: 700;
  letter-spacing: 4px;
  font-family: 'Alegreya Sans SC', sans-serif;
  text-align: center;
  margin-top: 100px;
  width: 100%;
}

#description {
  color: #71ABD1;
  font-size: 20px;
  font-weight: 350;
  letter-spacing: 2px;
  font-family: 'Hind Vadodara', sans-serif;
  text-align: center;
  padding-bottom: 45px;
}

.footer {
  position: static;
  text-align: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
}
 
.flex-col {
  display: flex;
  flex-direction: column;
  width: 33%;
}

.menu,
.info,
.contact {
  text-align: center;
  color: #71ABD1;
  font-size: 20px;
  font-weight: 350;
  letter-spacing: 2px;
  font-family: 'Kanit', sans-serif;
}

#footer-menu,
#footer-info,
#footer-contact {
  color: #71ABD1;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 2px;
  font-family: 'Kanit', sans-serif;
}

#instagram-icon {
  height: 25px;
  width: 25px;
}

/* PLACEHOLDER TWITTER LINK */
#twitter-icon { 
  height: 25px;
  width: 25px;
}

.caption {
  display: block;
}

a:link {
  color: #DE90C5;
  text-decoration: none;
}

a:visited {
  color: #DE90C5;
  text-decoration: none;
}

a:hover {
  color: #DE90C5;
  text-decoration: none;
}

a:active {
  color: #DE90C5;
  text-decoration: none;
}

.gallery {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  padding-bottom: 45px;
  padding-top: 45px;
  border-bottom: 1px solid #9B47EF;
}

.gallery-img {
  vertical-align: top;
  display: inline-block;
  text-align: center;
  height: 45%;
  width: 45%;
}

#img-gallery {
  padding: 2%;
  margin: 3%;
  height: 95%;
  width: 95%;
}

.slidershow{
  width: 700px;
  height: 400px;
  overflow: hidden;
}
.center{
  position: absolute;
  top: 275px;
  left: 50%;
  transform: translate(-50%,-50%);
}
.navigation{
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}
.bar{
  width: 50px;
  height: 10px;
  border: 2px solid #fff;
  margin: 6px;
  cursor: pointer;
  transition: 0.4s;
}
.bar:hover{
  background: #fff;
}

input[name="r"]{
  position: absolute;
  visibility: hidden;
}

.slides{
  width: 500%;
  height: 100%;
  display: flex;
}

.slide{
  width: 20%;
  transition: 0.6s;
}
.slide img{
  width: 100%;
  height: 100%;
}

#r1:checked ~ .s1{
  margin-left: 0;
}
#r2:checked ~ .s1{
  margin-left: -20%;
}
#r3:checked ~ .s1{
  margin-left: -40%;
}
#r4:checked ~ .s1{
  margin-left: -60%;
}
#r5:checked ~ .s1{
  margin-left: -80%;
}

